--- a/.github/workflows/nightly-macos.yml
+++ b/.github/workflows/nightly-macos.yml
@@ -24,6 +24,13 @@ jobs:
           p12-file-base64: ${{ secrets.CODESIGN_CERTIFICATE }}
           p12-password: ${{ secrets.CODESIGN_CERTIFICATE_PASSWORD }}
 
+      - uses: actions/cache@v2
+        with:
+          path: |
+            build/App/deps/wxWidgets
+            build/lib/wx
+            build/lib/libwx*
+          key: ${{ runner.os }}-${{ hashFiles('App/deps/wxWidgets') }}
       - name: Install depedencies using conan
         run: |
           pip3 install wheel setuptools
