Removed forward declarations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,4 +130,4 @@ endif (BUILD_APP)
 
 if (CMAKE_GENERATOR STREQUAL "Xcode")
     add_subdirectory(SwiftApp)
-endif (CMAKE_MAKE_PROGRAM STREQUAL "xcodebuild")
+endif (CMAKE_GENERATOR STREQUAL "Xcode")
