--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,11 +70,11 @@ endif ()
 set(PROJECT_HOMEPAGE_URL "https://github.com/delude88")
 set(PROJECT_DESCRIPTION "Online zusammen proben und auffuehren")
 set(PROJECT_COPYRIGHT "Copyright (c) 2021 Tobias Hegemann")
-set(SIGNUP_URL "https://dev.dstage.org/account/signup" CACHE STRING "Url link to sign up page")
-set(AUTH_URL "https://auth.dstage.org" CACHE STRING "Auth server url")
-set(API_URL "wss://api.dstage.org" CACHE STRING "API server websocket url (wss://...)")
-set(STAGE_URL "https://dev.dstage.org/stage" CACHE STRING "Url link to active stage page")
-set(SETTINGS_URL "https://dev.dstage.org/devices" CACHE STRING "Url link to settings page")
+set(SIGNUP_URL "https://web.dev.digital-stage.net/account/signup" CACHE STRING "Url link to sign up page")
+set(AUTH_URL "https://auth.dev.digital-stage.net" CACHE STRING "Auth server url")
+set(API_URL "wss://api.dev.digital-stage.net" CACHE STRING "API server websocket url (wss://...)")
+set(STAGE_URL "https://web.dev.digital-stage.net/stage" CACHE STRING "Url link to active stage page")
+set(SETTINGS_URL "https://web.dev.digital-stage.net/devices" CACHE STRING "Url link to settings page")
 set(USE_RT_AUDIO ON CACHE BOOL "Use RtAudio as audio engine" FORCE)
 option(BUILD_APP "Build App" ON)
 option(BUILD_SERVICE "Build headless service" ON)
